<resources>
    <string name="app_name">ContactList</string>
    <string-array name="images">
        <item>drawable 1</item>
        <item>drawable 2</item>
        <item>drawable 3</item>
        <item>drawable 4</item>
        <item>drawable 5</item>
        <item>drawable 6</item>
        <item>drawable 7</item>
        <item>drawable 8</item>
        <item>drawable 9</item>
        <item>drawable 10</item>
        <item>drawable 11</item>
        <item>drawable 12</item>
        <item>drawable 13</item>
        <item>drawable 14</item>
        <item>drawable 15</item>
        <item>drawable 16</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">opis</string>
    <string name="textview2">TextView</string>
    <string name="phone_number">Numer telefonu (9 cyfr)</string>
    <string name="birthday">Data urodzenia (dd-MM-yyyy)</string>
    <string name="surname">Nazwisko</string>
    <string name="name">Imię</string>
    <string name="add">Dodaj</string>
    <string name="delete_question">Usunąć kontakt?</string>
    <string name="dialog_confirm">Tak</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="delete_dialog_tag">deleteDialogTag</string>
    <string name="call_question">Wykonać połączenie?</string>
    <string name="call_dialog_tag">callDialogTag</string>


</resources>
