<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NewContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
             <EditText
                 android:id="@+id/editTextName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 android:hint="@string/name" />

             <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/surname"

            />

             <EditText
            android:id="@+id/editTextBirthday"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/birthday" />

             <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/phone_number" />

             <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onButtonClicked"
            android:text="@string/add" />
            />
        </LinearLayout>
    </ScrollView>
    

    
</LinearLayout>

